<resources>
    <string name="app_name">Join</string>
    <string name="name">Enter the Name</string>
    <string name="link_paste">Paste the link here</string>
    <string name="zoom">zoom</string>
    <string name="webex">webex</string>
    <string name="google_meet">Google Meet</string>
    <string name="list">LIST</string>
    <string name="add">Add</string>
    <string name="jio_meet">Jio Meet</string>
    <string name="google_meet2">Google Meet</string>
    <string name="webex_name">Webex</string>
    <string name="zoom_name">Zoom</string>
    <string name="other">Other</string>
    <string name="noActivityText">No meetings scheduled yet \nClick + button on the bottom</string>
    <string name="help">Help</string>
    <!--<string name="tvAboutDiscriptOld">This is an app developed by me with the help of my father. This app is made for fun and
    not for making any money. If found any problems or suggestions please email to sharatchandrats@gmail.com\nThankyou!</string>-->
    <string name="tvAboutDiscript">This is my maiden app developed with the help of my father. This app is made for fun and
    with an intention that this will be an useful tool. Please report any problems or suggestions to sharatchandrats@gmail.com\n\n\nThankyou!</string>
    <string name="play">Play</string>
    <string name="mail">Mail</string>
    <string name="about">About</string>
    <string name="version">v1.02.3 Beta</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="meet">Meet</string>
    <string name="date">DATE</string>
    <string name="linkpop">link</string>
    <string name="Titlepop">TITLE</string>
    <string name="meeting_logo">Meeting Logo</string>
    <string name="nameMeet">Name</string>
    <string name="linkMeet">Link</string>
    <string name="monthMeet">FEB</string>
    <string name="_15">15</string>
    <string name="swipe">Swipe</string>
    <string name="joinSplash">Join</string>
    <string name="copyright">© Cricketish 2020</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="paste_btn">Paste</string>
    <string name="theme">Theme</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="shortcut_label_short">Add</string>
    <string name="shortcut_label_long">Add a Meeting</string>
    <string name="shortcut_disabled_short">Disabled</string>
</resources>