<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:nestedScrollingEnabled="true">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="80dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/etName2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:maxLength="20"
        android:layout_marginRight="25dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#292929"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="108dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etLink2"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/link_paste"
            android:inputType="textPersonName"
            android:textColor="#292929"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="108dp" />

        <ImageView
            android:id="@+id/btnPaste2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            app:srcCompat="@drawable/paste"
            android:contentDescription="@string/paste_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTime2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="#00808080"
            android:fontFamily="monospace"
            android:hint="@string/date_amp_time"
            android:textColor="#92000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnJioMeet2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/jio_meet"
            android:focusable="true"
            app:srcCompat="@mipmap/jio" />

        <ImageView
            android:id="@+id/btnGMeet2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/google_meet"
            android:focusable="true"
            app:srcCompat="@mipmap/google" />

        <ImageView
            android:id="@+id/btnWebex2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/webex_name"
            android:focusable="true"
            app:srcCompat="@mipmap/webex" />

        <ImageView
            android:id="@+id/btnZoom2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/zoom_name"
            android:focusable="true"
            app:srcCompat="@mipmap/zoom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOther2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_other"
            android:fontFamily="monospace"
            android:text="@string/other"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/copyright" />

</LinearLayout>