<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity"
    android:scrollbarAlwaysDrawHorizontalTrack="true">

    <TextView
        android:id="@+id/tvAboutHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:text="@string/about"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/version"
        app:layout_constraintBottom_toTopOf="@+id/tvAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutHead"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/tvAboutDiscript"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutHead"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
        app:layout_constraintVertical_bias="0.65">

        <ImageView
            android:id="@+id/ivMail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/mail"
            android:focusable="true"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/ivPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:focusable="true"
            app:srcCompat="@drawable/play" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>