<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="300dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="160dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="160dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#E8E7E6"
        app:cardCornerRadius="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/Titlepop"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/linkpop"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="#D81E1E1E"
                android:textIsSelectable="false"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/google"
                    android:contentDescription="@string/meet" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:foregroundGravity="left"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/meet"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="#D2404040" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:fontFamily="monospace"
                    android:text="@string/cancel"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color3rd" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:fontFamily="monospace"
                    android:text="@string/join"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>