<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <Button
        android:id="@+id/btnTime2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorTransperent"
        android:fontFamily="monospace"
        android:hint="@string/date_amp_time"
        android:textColor="#92000000"
        android:textSize="20sp"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
    android:id="@+id/textView9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="24dp"
    android:fontFamily="monospace"
    android:gravity="center"
    android:text="@string/add"
    android:textSize="80sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/etName"
    style="@style/Widget.AppCompat.EditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="25dp"
    android:autofillHints=""
    android:clickable="false"
    android:ems="10"
    android:fontFamily="monospace"
    android:hint="@string/name"
    android:inputType="textPersonName"
    android:maxLength="20"
    android:textColor="#292929"
    android:textSize="22sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName">

        <EditText
            android:id="@+id/etLink2"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/link_paste"
            android:inputType="textPersonName"
            android:textColor="#292929"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/btnPaste2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/paste_btn"
            app:srcCompat="@drawable/paste" />

    </LinearLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/floatingActionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="24dp"
    android:backgroundTint="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/add" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/jetbrains_extralight"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jetbrains_extralight"
        android:text="is a Zoom meeting"
        app:layout_constraintStart_toStartOf="@+id/btnTime2"
        app:layout_constraintTop_toBottomOf="@+id/btnTime2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <ImageView
            android:id="@+id/btnGMeet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@mipmap/google" />

        <ImageView
            android:id="@+id/btnJioMeet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/jio" />

        <ImageView
            android:id="@+id/btnWebex"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/webex" />

        <ImageView
            android:id="@+id/btnZoom"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/zoom" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/other" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>